z-index fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -29,7 +29,7 @@ body{
   background:colors(primary, light)
 }
 
-// controls the triangle button, but if it were to be more down, it wasnt in effect?
+// controls the triangle button
 html {
   scroll-behavior: smooth;
 }
@@ -78,7 +78,7 @@ html {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 4;
+    z-index: 100;
     top: 0;
     left: 0;
     background-color: colors(primary,light);
@@ -153,7 +153,7 @@ html {
       position: -webkit-fixed;
       position: fixed;
       cursor: pointer;
-      
+      z-index: 10;
     }
     #wave{
         width: 54px;
@@ -386,6 +386,7 @@ footer {
   text-shadow: 1px 1px 1px colors(secondary, bluee);
 }
 .animal_name_dumbo{
+  z-index: 1;
   text-align: center;
   position: relative;
   text-shadow: 1px 1px 1px colors(secondary, pinkk);
@@ -448,6 +449,7 @@ footer {
 }
 
 .appear {
+  z-index: 4;
   width: 35vw;
   margin-left: 3vw;
   text-align: justify;
@@ -551,8 +553,8 @@ footer {
 @media screen and (max-width: 1000px){
   .bio_container{
     display: flex;
-margin-top: 8vh;
-    flex-direction: column !important;
+    margin-top: 8vh;
+    flex-direction: column;
     .bio_content{
       width: 73%;
       margin: 10%;
